# gh-ffyt

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json  video_01_content_brief.md
.github/workflows/: render-and-upload.yml
briefs/: Content_Brief.md  Content_brief-pending.md  Video1_brief-pending.md  Video2_brief-d17272a.md  Video2_brief_-5a3f017.md  Video3_brief-pending.md  example_brief-7d594b.md
hf/: index.html
scripts/: generate_voiceover.py  produce_video_01.py  reencode_clips.py  upload_to_youtube.py
specs/: _example.json  world_cup_2026.json
src/pipeline/: __init__.py  brief.py  brief_fill.py  cli.py  compose.py  config.py  defaults.py  fetchers.py  renderers.py  schema.py  ui.py  upload.py  voiceover.py
src/pipeline/md2yt_ui/: __init__.py  app.py  logbuf.py  runner.py
src/pipeline/md2yt_ui/static/: app.js  style.css
src/pipeline/md2yt_ui/templates/: index.html
src/pipeline/resources/: base.html
tests/: conftest.py  test_brief.py  test_brief_fill.py  test_brief_outline.py  test_compose_paths.py  test_config.py  test_from_brief_cli.py  test_renderers.py  test_schema.py  test_ui_app.py  test_ui_runner.py  test_upload_metadata.py
tests/fixtures/: bad_spec.json  good_spec.json
web/: next.config.js  package.json  tailwind.config.js
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/download/: route.ts
web/app/api/history/: route.ts
web/app/api/render/: route.ts
web/app/api/status/: route.ts
web/app/api/upload/: route.ts
web/lib/: github.ts  util.ts
